force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/ICX_Order_Search_Listener__mdt.object-meta.xml
<CustomObject>
    <description>Objects to Listen in the &quot;Order Search&quot; context</description>
    <label>ICX Order Search  Listener</label>
    <pluralLabel>ICX Order Search Listeners</pluralLabel>
</CustomObject>