force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/fields/Apex_Method_to_Execute__c.field-meta.xml
<CustomField>
    <fullName>Apex_Method_to_Execute__c</fullName>
    <label>Apex Method to Execute</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>genericUpdate</fullName>
                <label>Generic Update</label>
            </value>
            <value>
                <fullName>insertOrderSearchFromOrderLine</fullName>
                <label>Insert OrderSearch From OrderLine</label>
            </value>
            <value>
                <fullName>updOrderSearchFromUser</fullName>
                <label>Upd OrderSearch From User</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>