force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/fields/Execution_Order__c.field-meta.xml
<CustomField>
    <fullName>Execution_Order__c</fullName>
    <label>Execution Order</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>