force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/fields/Object_To_Listen__c.field-meta.xml
<CustomField>
    <fullName>Object_To_Listen__c</fullName>
    <label>Object To Listen</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>Order_Search_Listeners</relationshipLabel>
    <relationshipName>Order_Search_Listeners</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>