force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/fields/Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>Operation_Type__c</fullName>
    <label>Operation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CREATE</fullName>
                <default>true</default>
                <label>CREATE</label>
            </value>
            <value>
                <fullName>UPDATE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>