force-twisticonics/main/default/objects/ICX_Order_Search_Listener__mdt/listViews/icxordersearchlistener_all.listView-meta.xml
<ListView>
    <fullName>icxordersearchlistener_all</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Object_To_Listen__c</columns>
    <columns>Operation_Type__c</columns>
    <columns>Apex_Method_to_Execute__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
    <language>en_US</language>
</ListView>